Takes out hashing

--- a/src/meta/json/projects.json
+++ b/src/meta/json/projects.json
@@ -78,7 +78,7 @@
       "es": "Encargado de los m\u00f3dulos de ling\u00fc\u00edstica computacional"
     }, 
     "type": "oficial", 
-    "years": "2013-"
+    "years": "2013-2015"
   }, 
   {
     "agency": {
@@ -98,7 +98,7 @@
       "es": "Encargado de los m\u00f3dulos de ling\u00fc\u00edstica computacional"
     }, 
     "type": "oficial", 
-    "years": "2013-"
+    "years": "2013-2016"
   }, 
   {
     "agency": {
